layered-contracts/src/tests/snapshots/layered_contracts__tests__term_reference__multiple_references_same_term.snap
---
source: layered-contracts/src/tests/term_reference.rs
expression: "test_term_references(r#\"\"Contractor\" means John. Contractor shall deliver. Contractor shall comply. The Contractor agrees.\"#)"
---
"  Contractor  "     means     John  .     Contractor     shall     deliver  .     Contractor     shall     comply  .     The     Contractor     agrees  .
                     ╰───╯Means
                                                          ╰───╯Shall
                                                                                                  ╰───╯Shall
╰────────────────────────╯Scored(DefinedTerm { term_name: "Contractor", definition_type: QuotedMeans }, conf: 0.95)
                                           ╰────────╯Scored(TermReference { term_name: "Contractor", definition_type: QuotedMeans }, conf: 0.90)
                                                                                   ╰────────╯Scored(TermReference { term_name: "Contractor", definition_type: QuotedMeans }, conf: 0.90)
                                                                                                                                  ╰────────╯Scored(TermReference { term_name: "Contractor", definition_type: QuotedMeans }, conf: 0.95)
