layered-contracts/src/tests/snapshots/layered_contracts__tests__term_reference__multiword_reference.snap
---
source: layered-contracts/src/tests/term_reference.rs
expression: "test_term_references(r#\"\"Effective Date\" means January 1. The Effective Date shall govern.\"#)"
---
"  Effective     Date  "     means     January     1  .     The     Effective     Date     shall     govern  .
                             ╰───╯Means
                                                                                           ╰───╯Shall
╰────────────────────────────────╯Scored(DefinedTerm { term_name: "Effective Date", definition_type: QuotedMeans }, conf: 0.95)
                                                                    ╰────────────────╯Scored(TermReference { term_name: "Effective Date", definition_type: QuotedMeans }, conf: 0.95)
