layered-contracts/src/tests/snapshots/layered_contracts__tests__term_reference__no_defined_terms.snap
---
source: layered-contracts/src/tests/term_reference.rs
expression: "test_term_references(\"The Company shall deliver goods to the Contractor.\")"
---
The     Company     shall     deliver     goods     to     the     Contractor  .
                    ╰───╯Shall
