layered-contracts/src/tests/snapshots/layered_contracts__tests__term_reference__partial_multiword_no_match.snap
---
source: layered-contracts/src/tests/term_reference.rs
expression: "test_term_references(r#\"\"Effective Date\" means January 1. This Effective period begins.\"#)"
---
"  Effective     Date  "     means     January     1  .     This     Effective     period     begins  .
                             ╰───╯Means
╰────────────────────────────────╯Scored(DefinedTerm { term_name: "Effective Date", definition_type: QuotedMeans }, conf: 0.95)
