layered-contracts/src/tests/snapshots/layered_contracts__tests__term_reference__reference_after_parenthetical.snap
---
source: layered-contracts/src/tests/term_reference.rs
expression: "test_term_references(r#\"ABC Corp (the \"Company\"). Company shall deliver.\"#)"
---
ABC     Corp     (  the     "  Company  "  )  .     Company     shall     deliver  .
                                                                ╰───╯Shall
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                    ╰─────╯Scored(TermReference { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
