layered-contracts/src/tests/snapshots/layered_contracts__tests__term_reference__reference_after_quoted_means.snap
---
source: layered-contracts/src/tests/term_reference.rs
expression: "test_term_references(r#\"\"Company\" means ABC Corp. The Company shall deliver.\"#)"
---
"  Company  "     means     ABC     Corp  .     The     Company     shall     deliver  .
                  ╰───╯Means
                                                                    ╰───╯Shall
╰─────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: QuotedMeans }, conf: 0.95)
                                                        ╰─────╯Scored(TermReference { term_name: "Company", definition_type: QuotedMeans }, conf: 0.95)
